2007-03-23  Jonathon Jongsma  <jjongsma@gnome.org>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* m4/ax_boost_base.m4:
	* m4/ax_boost_unit_test_framework.m4: Add some basic test infrastructure.
	It's disabled by default, and must be explicitly enabled by passing
	--enable-tests to configure (or by setting the CAIROMM_DEVEL environment
	variable to "on").  It uses the boost unit test framework, but this should
	not be required unless you've explicitly enabled tests.  If tests are
	enabled, you can easily run them with 'make check'
	* tests/Makefile.am:
	* tests/test-context.cc: added the beginning of a test for Cairo::Context.
	Most of these tests are really very interesting.  Basically what I'm trying
	to do is a) test some basic behaviors, and b) excercise the functionality a
	little bit.  One of the tests currently fails due to a RefPtr::cast_dynamic
	failure, so I have to see what's going on there.

2007-03-22  Murray Cumming  <murrayc@murrayc@murrayc.com>

	* cairomm/enums.h: Restored FORMAT_RGB16_565 and marked it as deprecated.
	Note that CAIRO_FORMAT_RGB16_565 has not really been removed from cairo. 
	It has just moved from the enum to a #define in cairo-deprecated.
	* cairomm/context.cc:
	* cairomm/context.h: Made get_dash() const.
	Renamed clip_extents() to get_clip_extents(), to match the other get_*_extents() methods
	(in Context, if not in other classes), and made it const.
	Made copy_clip_rectangle_list() const.
	* cairomm/pattern.cc:
	* cairomm/pattern.h: Make the RadialGradient::get_radial_circles(), LinearGradient::get_linear_points(), 
	and Gradient::get_color_stops() methods const.
	Added a non-const method overload of get_surface().
	Correc the get_color_stops() implementation to match the declaration.

2007-03-22  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc: Minor comment cleanups
	* cairomm/pattern.cc: get the gradient stops by reference parameter instead
	of returning by value.  This saves an extra copy of the vector.
